fixed spacing between text on front of card

--- a/css/wedding_style.css
+++ b/css/wedding_style.css
@@ -78,6 +78,7 @@ html, body {
 
 .card-front h2 {
     margin-bottom: 40px;
+	margin-top: 60px;
     font-size: 36px;
     font-family: sloop-script-pro, sans-serif;
     font-weight: 400;
@@ -92,7 +93,7 @@ html, body {
 }
 
 .card-front p {
-    margin-top: 20px;
+    margin-top: 0px;
     font-size: 36px;
     font-family: sloop-script-pro, sans-serif;
 }
